--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
    	<link rel="stylesheet" type="text/css" href="css/cobblestone.css" />
   	<link rel="stylesheet" type="text/css" href="css/main.css">
   	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
+  
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5425d02003853126" async></script>
+
   </head>
   
   <body>
