redo html/css, add footer

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                   <input type="text" name="b_6d818feb2a612cc766a2b5a71_800d570271" tabindex="-1"  value="">
                 </div>
         		  </div>
-              <div class="large-4 columns">
-        		    <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">Keep me posted</button>
+              <div id="mc-embedded-subscribe_container" class="large-4 columns">
+        		    <button id="mc-embedded-subscribe" type="submit" name="subscribe">Keep me posted</button>
               </div>
             </div>
       		</form>
@@ -54,6 +54,15 @@
           <small>Paulo Coelho</small>
         </div> 
       
+      </div>
+      <div id="footer" class="row">
+        <div class="footer_title large-4 columns">ABOUT
+          <div class="footer_highlight"></div>
+        </div>
+        <div class="footer_title large-4 columns">TEAM
+        </div>
+        <div class="footer_title large-4 columns">CONTACT
+        </div>   
       </div>
     </div>
   </body>
